--- a/Synaptic events fitting with user data.ipynb
+++ b/Synaptic events fitting with user data.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "## Using this notebook\n",
     " \n",
@@ -10,13 +9,12 @@
     "- To retain any changes made, you need to save the notebook. \n",
     "\n",
     "For detailed information about the notebook interface see _Help -> User Interface Tour_ in the menu, and the [Guidebook](https://lbologna.github.io/hbp-sp6-guidebook/getting_started/getting_started.html#working-with-collabs) for working with Collabs."
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "from IPython.display import HTML, Javascript, display\n",
     "from ipywidgets import widgets\n",
@@ -35,22 +33,22 @@
     "import subprocess\n",
     "import unicodedata\n",
     "import xml.etree.ElementTree"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "warnings.filterwarnings('ignore')"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "if os.path.isdir('GUIUD'):\n",
     "    shutil.rmtree('GUIUD')\n",
@@ -78,22 +76,22 @@
     "\n",
     "h1=HTML(javascript2)\n",
     "h1.display='none'"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "subprocess.call(\"nrnivmodl\");"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "if os.path.isdir('transfer'):\n",
     "    shutil.rmtree('transfer')\n",
@@ -108,24 +106,24 @@
     "shutil.copy2(os.path.join('..','..', 'data', 'ProbGABAAB_EMS_GEPH_g.mod'), '.')\n",
     "\n",
     "os.chdir(\"..\")"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "file_widget=widgets.FileUpload()\n",
     "file_widget.layout.display='none'\n",
     "file_widget.layout.display=''"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "H2014=widgets.HTML(\"\"\"<input name=\"mioTesto\" type=\"text\" value=\"Select experimental file\" \\\n",
     "style=\"color: black; background-color: white; border: none; font-weight: bold\" size=\"60\" \\\n",
@@ -453,13 +451,13 @@
     "tabs.set_title(0, 'First page')\n",
     "tabs.set_title(1, 'Second page')\n",
     "tabs.set_title(2, 'Third page')\n"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "def assign_file_types(filename):\n",
     "    \"\"\" assign file types based on file name and extension \"\"\"\n",
@@ -469,13 +467,13 @@
     "    else:\n",
     "        filetype = 'application/unknown'\n",
     "    return filetype"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "def checkloginNSG(_):\n",
     "    username=username_widget.value\n",
@@ -498,13 +496,13 @@
     "        password_widget.disabled=True\n",
     "    msg_widget.value=msg\n",
     "    msg_widget.layout.display=''"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "os.chdir(\"..\")\n",
     "%run \"unicore_api_Python3.ipynb\"\n",
@@ -537,13 +535,13 @@
     "buttonlogin.on_click(checkloginNSG)\n",
     "msg_widget = widgets.Text(layout=widgets.Layout(width='40%'))\n",
     "msg_widget.layout.display='none'"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "def runNSG(_):\n",
     "    global runningUNSG\n",
@@ -566,7 +564,7 @@
     "        PASSWORD = password\n",
     "        KEY = 'Application_Fitting-DA5A3D2F8B9B4A5D964D4D2285A49C57'\n",
     "        URL = 'https://nsgr.sdsc.edu:8443/cipresrest/v1'\n",
-    "        TOOL = 'NEURON77_TG'\n",
+    "        TOOL = 'NEURON_EXPANSE'\n",
     "    \n",
     "        with open(os.path.join('transfer', 'start.py'), 'w') as f:\n",
     "            expf=list(file_widget.value.keys())[0]\n",
@@ -639,13 +637,13 @@
     "        myboxConf.children[1].layout.display='none'\n",
     "        myboxConf.layout.display=''\n",
     "        myboxUNSG.children[0].disabled=False"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "def runNSGifconfig(_):\n",
     "    if os.path.isfile(os.path.join('transfer', 'config.txt')):\n",
@@ -653,13 +651,13 @@
     "        runNSG(_)\n",
     "    else:\n",
     "        labelNSG.value = \"You have to write the config file first!\""
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "def checksimnsg(CheckSNSG):\n",
     "    headers = {'cipres-appkey' : KEY}\n",
@@ -746,13 +744,13 @@
     "            myboxConf.layout.display=''\n",
     "            runningUNSG=False\n",
     "            myboxUNSG.children[0].disabled=False"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "def runmethod(change):\n",
     "    if RBM.value=='all_traces':\n",
@@ -761,13 +759,13 @@
     "    else:\n",
     "        TR.value='3'\n",
     "        TR.layout.display=''"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "def RBHPCclick(_):\n",
     "    STU.layout.display='none'\n",
@@ -782,13 +780,13 @@
     "    if runningUNSG:\n",
     "        STN.layout.display=''\n",
     "        IU.layout.display=''"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "RBHPC=widgets.RadioButtons(description= 'Run on:', options=['NSG'])\n",
     "display(RBHPC)\n",
@@ -840,13 +838,13 @@
     "\n",
     "runningUNSG=False\n",
     "RBHPC.on_trait_change(RBHPCclick, 'value')"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "from IPython.display import HTML\n",
     "\n",
@@ -866,7 +864,9 @@
     "    document.querySelectorAll(\".jp-Cell-inputWrapper\").forEach(box => box.style.display = 'none');\n",
     "</script>\n",
     "''')"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   }
  ],
  "metadata": {
